feat(admin-portal): enhance core components and PWA support
Core component updates:
- App.tsx - Enhanced application structure
- Layout.tsx - Improved layout with new menu items
- NotificationDropdown.tsx - Real-time notifications
- PWAUpdatePrompt.tsx - PWA update notifications
- WebSocketProvider.tsx - WebSocket connection management

Hooks and utilities:
- useDebounce.ts - Debounce hook for performance

PWA enhancements:
- dev-dist/sw.js - Service worker configuration
- package.json - Updated dependencies

Internationalization:
- en-US.json - English translations updated
- zh-CN.json - Chinese translations updated

Configuration:
- main.tsx - Application entry point updates
- tsconfig.json - TypeScript configuration

--- a/frontend/admin-portal/src/i18n/locales/en-US.json
+++ b/frontend/admin-portal/src/i18n/locales/en-US.json
@@ -28,15 +28,32 @@
   },
   "menu": {
     "dashboard": "Dashboard",
-    "systemConfigs": "System Configs",
-    "admins": "Admins",
-    "roles": "Roles",
-    "auditLogs": "Audit Logs",
+    "merchantManagement": "Merchant Management",
     "merchants": "Merchants",
+    "kyc": "KYC Review",
+    "merchantLimits": "Merchant Limits",
+    "transactionManagement": "Transaction Management",
     "payments": "Payments",
     "orders": "Orders",
+    "disputes": "Disputes",
     "riskManagement": "Risk Management",
-    "settlements": "Settlements"
+    "financeManagement": "Finance Management",
+    "accounting": "Accounting",
+    "settlements": "Settlements",
+    "withdrawals": "Withdrawals",
+    "reconciliation": "Reconciliation",
+    "channelConfig": "Channel Configuration",
+    "channels": "Payment Channels",
+    "cashier": "Cashier",
+    "webhooks": "Webhooks",
+    "analyticsCenter": "Analytics Center",
+    "analytics": "Analytics",
+    "notifications": "Notifications",
+    "systemManagement": "System Management",
+    "systemConfigs": "System Configs",
+    "admins": "Admins",
+    "roles": "Roles & Permissions",
+    "auditLogs": "Audit Logs"
   },
   "layout": {
     "logo": "Payment Platform Admin",
