--- a/frontend/admin-portal/src/i18n/locales/zh-CN.json
+++ b/frontend/admin-portal/src/i18n/locales/zh-CN.json
@@ -28,15 +28,32 @@
   },
   "menu": {
     "dashboard": "仪表板",
-    "systemConfigs": "系统配置",
-    "admins": "管理员管理",
-    "roles": "角色管理",
-    "auditLogs": "审计日志",
-    "merchants": "商户管理",
-    "payments": "支付管理",
+    "merchantManagement": "商户管理",
+    "merchants": "商户列表",
+    "kyc": "KYC审核",
+    "merchantLimits": "商户限额",
+    "transactionManagement": "交易管理",
+    "payments": "支付记录",
     "orders": "订单管理",
-    "riskManagement": "风控管理",
-    "settlements": "结算管理"
+    "disputes": "争议处理",
+    "riskManagement": "风险管理",
+    "financeManagement": "财务管理",
+    "accounting": "账务管理",
+    "settlements": "结算管理",
+    "withdrawals": "提现管理",
+    "reconciliation": "对账管理",
+    "channelConfig": "渠道配置",
+    "channels": "支付渠道",
+    "cashier": "收银台管理",
+    "webhooks": "Webhook管理",
+    "analyticsCenter": "数据中心",
+    "analytics": "数据分析",
+    "notifications": "通知管理",
+    "systemManagement": "系统管理",
+    "systemConfigs": "系统配置",
+    "admins": "管理员",
+    "roles": "角色权限",
+    "auditLogs": "审计日志"
   },
   "layout": {
     "logo": "支付平台管理",
