feat(merchant-portal): enhance core components and PWA
Merchant portal core updates:
- App.tsx - Enhanced application structure
- Layout.tsx - Improved navigation with new pages
- PWAUpdatePrompt.tsx - PWA update notifications
- WebSocketProvider.tsx - Real-time WebSocket support

PWA support:
- dev-dist/sw.js - Service worker for offline support

Internationalization:
- en-US.json - Updated English translations
- zh-CN.json - Updated Chinese translations

Features:
- Real-time notifications via WebSocket
- Offline support with service worker
- Progressive Web App capabilities
- Bilingual interface (EN/CN)

--- a/frontend/merchant-portal/src/i18n/locales/en-US.json
+++ b/frontend/merchant-portal/src/i18n/locales/en-US.json
@@ -47,14 +47,23 @@
   },
   "menu": {
     "dashboard": "Dashboard",
+    "paymentOperations": "Payment Operations",
+    "createPayment": "Create Payment",
     "transactions": "Transactions",
     "orders": "Orders",
-    "account": "Account",
-    "createPayment": "Create Payment",
+    "financeManagement": "Finance Management",
     "refunds": "Refunds",
     "settlement": "Settlement",
-    "apiKeys": "API Keys",
+    "withdrawals": "Withdrawals",
+    "reconciliation": "Reconciliation",
+    "serviceManagement": "Service Management",
+    "channels": "Payment Channels",
     "cashierConfig": "Cashier Config",
+    "disputes": "Disputes",
+    "dataAndSettings": "Data & Settings",
+    "analytics": "Analytics",
+    "apiKeys": "API Keys",
+    "account": "Account",
     "notifications": "Notifications"
   },
   "layout": {
