--- a/frontend/merchant-portal/src/i18n/locales/zh-CN.json
+++ b/frontend/merchant-portal/src/i18n/locales/zh-CN.json
@@ -52,14 +52,23 @@
   },
   "menu": {
     "dashboard": "仪表板",
+    "paymentOperations": "支付业务",
+    "createPayment": "发起支付",
     "transactions": "交易记录",
     "orders": "订单管理",
-    "account": "账户设置",
-    "createPayment": "发起支付",
+    "financeManagement": "财务管理",
     "refunds": "退款管理",
     "settlement": "结算账户",
-    "apiKeys": "API密钥",
+    "withdrawals": "提现管理",
+    "reconciliation": "对账记录",
+    "serviceManagement": "服务管理",
+    "channels": "支付渠道",
     "cashierConfig": "收银台配置",
+    "disputes": "争议处理",
+    "dataAndSettings": "数据与设置",
+    "analytics": "数据分析",
+    "apiKeys": "API密钥",
+    "account": "账户设置",
     "notifications": "通知中心"
   },
   "layout": {
